# multimedia_networking

./: .gitignore
homeworks/1/: 1.c  1.tex
homeworks/2/: 2.fdb_latexmk  2.fls  2.tex  run
homeworks/3/: 3.tex  run
homeworks/4/: 4.tex  run
homeworks/5/: 5_4.tex  5_5.tex  run
programming_assignments/1/: CMakeLists.txt  Test1.Huff.txt  Test1.inputb.txt.huff  Test1.inputc.txt.huff.orig  Test2.Huff.txt  Test2.input.huff  Test2.input.txt  bintest  dd  diff_check  huffman.c  run_all
programming_assignments/2/: 1  CMakeLists.txt  COPYING  Makefile  addCopyRight  addHeader  all.tex  block.cpp  block.h  dct.cpp  dct.h  gif2pgm  macroblock.cpp  macroblock.h  macroblockManager.cpp  macroblockManager.h  makefile  myDCT.c  myDCT.cpp  myIDCT.cpp  outTest0  outTest0IDCT.pgm  outTest1IDCT.pgm  outTest2  outTest23_5IDCT.pgm  outTest2IDCT.pgm  outTest35  pgm2gif  pgmEncoded.cpp  pgmEncoded.h  pgmFileParser.cpp  pgmFileParser.h  rawInput.cpp  rawInput.h  rcompare  rcompare0  rcompare1  run
programming_assignments/2/scirpts/: rcompare2  run
programming_assignments/2/tests/: cleanup  run  tuscon2.pgm
programming_assignments/2/tests/dct/: run
programming_assignments/2/tests/origin_pgm/: run
programming_assignments/2/tests/original_gifs/: run
programming_assignments/2/tests/originals/: run
programming_assignments/2/tests/pgm/: run
programming_assignments/2/tests/sampleOut/: tuscon2.1.0.dct  tuscon2.pgm
